@@ -1,3 +1,7 @@
+2013-09-25  Andreas K. Foerster  <info@akfoerster.de>
+
+	* lua/audioplayer.lua: experimental support for external decoders
+
 2013-09-20  Andreas K. Foerster  <info@akfoerster.de>
 
 	* avtaddons.h, avtvorbis.c (avt_load_vorbis_stream):
